[package]
name = "rotatron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
poise = "*"
phf = { version = "0.10", features = ["macros"] }
image = "*"
reqwest = "*"
log = "*"
